added pagination to api for search messages
