# source/SubsystemTests/Drivers/B2C/Client/swagger.json
@@ -63,7 +63,7 @@
               "schema": {
                 "allOf": [
                   {
-                    "$ref": "#/components/schemas/SearchArchivedMessagesCriteria"
+                    "$ref": "#/components/schemas/SearchArchivedMessagesRequest"
                   }
                 ]
               }
@@ -72,7 +72,7 @@
               "schema": {
                 "allOf": [
                   {
-                    "$ref": "#/components/schemas/SearchArchivedMessagesCriteria"
+                    "$ref": "#/components/schemas/SearchArchivedMessagesRequest"
                   }
                 ]
               }
@@ -81,7 +81,7 @@
               "schema": {
                 "allOf": [
                   {
-                    "$ref": "#/components/schemas/SearchArchivedMessagesCriteria"
+                    "$ref": "#/components/schemas/SearchArchivedMessagesRequest"
                   }
                 ]
               }
@@ -404,6 +404,19 @@
           5
         ]
       },
+      "DirectionToSortBy": {
+        "type": "integer",
+        "description": "Represents the direction to sort by when searching for archived messages.",
+        "format": "int32",
+        "x-enumNames": [
+          "Ascending",
+          "Descending"
+        ],
+        "enum": [
+          0,
+          1
+        ]
+      },
       "DurableOrchestrationStatus": {
         "type": "object",
         "additionalProperties": false,
@@ -474,6 +487,25 @@
             }
           }
         }
+      },
+      "FieldToSortBy": {
+        "type": "integer",
+        "description": "Represents the fields that can be sorted on when searching for archived messages.",
+        "format": "int32",
+        "x-enumNames": [
+          "MessageId",
+          "DocumentType",
+          "SenderNumber",
+          "ReceiverNumber",
+          "CreatedAt"
+        ],
+        "enum": [
+          0,
+          1,
+          2,
+          3,
+          4
+        ]
       },
       "JToken": {
         "type": "array",
@@ -718,6 +750,87 @@
           },
           "includeRelatedMessages": {
             "type": "boolean"
+          }
+        }
+      },
+      "SearchArchivedMessagesCursor": {
+        "type": "object",
+        "description": "Pagination cursor for the search of archived messages.\r\nPointing to the field value to sort by and the record id.\r\nWhen navigating forward, the cursor points to the last record of the current page.\r\nand when navigating backward, the cursor points to the first record of the current page.",
+        "additionalProperties": false,
+        "properties": {
+          "fieldToSortByValue": {
+            "type": "string",
+            "description": "",
+            "nullable": true
+          },
+          "recordId": {
+            "type": "integer",
+            "description": "",
+            "format": "int64"
+          }
+        }
+      },
+      "SearchArchivedMessagesPagination": {
+        "type": "object",
+        "description": "Pagination when searching for archived messages that supports sorting on a specific field.",
+        "additionalProperties": false,
+        "properties": {
+          "cursor": {
+            "description": "",
+            "nullable": true,
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/SearchArchivedMessagesCursor"
+              }
+            ]
+          },
+          "sortBy": {
+            "description": "",
+            "nullable": true,
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/FieldToSortBy"
+              }
+            ]
+          },
+          "directionToSortBy": {
+            "description": "",
+            "nullable": true,
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/DirectionToSortBy"
+              }
+            ]
+          },
+          "pageSize": {
+            "type": "integer",
+            "description": "",
+            "format": "int32"
+          },
+          "navigationForward": {
+            "type": "boolean",
+            "description": ""
+          }
+        }
+      },
+      "SearchArchivedMessagesRequest": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "searchCriteria": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/SearchArchivedMessagesCriteria"
+              }
+            ]
+          },
+          "pagination": {
+            "description": "Pagination when searching for archived messages that supports sorting on a specific field.",
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/SearchArchivedMessagesPagination"
+              }
+            ]
           }
         }
       }
